# rmenu

./: Cargo.toml  LICENSE  README.md
src/: desktop_entry.rs  error.rs  key_file.rs  main.rs
